--- a/meep/social/templates/base.html
+++ b/meep/social/templates/base.html
@@ -16,7 +16,16 @@
 <body>
     {% include 'navbar.html' %}
     <br />
-    <div>
+    <div class="container overflow-hidden">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+
         {% block content %}
         {% endblock %}
     </div>
