Follow and Unfollow buttons

--- a/meep/social/templates/profile.html
+++ b/meep/social/templates/profile.html
@@ -29,6 +29,19 @@
                     {% endfor %}
                 </div>
             </div>
+            <br />
+            <form method="POST">
+                {% csrf_token %}
+                {% if profile in user.profile.follows.all %}
+                <button type="submit" class="btn btn-outline-danger" name="follow" value="unfollow">
+                    Unfollow @{{ profile.user.username|lower }}
+                </button>
+                {% else %}
+                <button type="submit" class="btn btn-outline-success" name="follow" value="follow">
+                    Follow @{{ profile.user.username|lower }}
+                </button>
+                {% endif %}
+            </form>
         </div>
     </div>
 </div>
