--- a/meep/social/templates/home.html
+++ b/meep/social/templates/home.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <h1>Meeps</h1>
+
+{% for meep in meeps %}
+<div class="alert alert-secondary" role="alert">
+    {{ meep }}
+</div>
+{% endfor %}
+
 {% endblock %}
