--- a/meep/social/templates/profile.html
+++ b/meep/social/templates/profile.html
@@ -6,6 +6,14 @@
     <div class="row">
         <div class="col-8">
             <h1>{{ profile.user.username }}'s Profile</h1>
+            <br />
+            {% if meeps %}
+            {% for meep in meeps %}
+            <div class="alert alert-secondary" role="alert">
+                {{ meep }}
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
         <div class="col-4">
             <div class="card">
