--- a/meep/social/templates/home.html
+++ b/meep/social/templates/home.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container text-center">
+    <div class="row">
+        <div class="col-8">
+            <h1>Meeps</h1>
 
-<h1>Meeps</h1>
+            {% for meep in meeps %}
+            <div class="alert alert-secondary" role="alert">
+                {{ meep.body }} <br />
+                <small class="text-muted">
+                    {{ meep.created_at }} by @{{ meep.user.username }}
+                </small>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-4">
+            {% if form %}
+            <form method="POST">
+                {% csrf_token %}
+                {{ form }}
 
-{% for meep in meeps %}
-<div class="alert alert-secondary" role="alert">
-    {{ meep }}
+                <br />
+                <button type="submit" class="btn btn-primary">Meep!</button>
+            </form>
+            {% endif %}
+        </div>
+    </div>
 </div>
-{% endfor %}
 
 {% endblock %}
