--- a/meep/social/templates/profile.html
+++ b/meep/social/templates/profile.html
@@ -10,7 +10,10 @@
             {% if meeps %}
             {% for meep in meeps %}
             <div class="alert alert-secondary" role="alert">
-                {{ meep }}
+                {{ meep.body }} <br />
+                <small class="text-muted">
+                    {{ meep.created_at }} by @{{ meep.user.username }}
+                </small>
             </div>
             {% endfor %}
             {% endif %}
