--- a/meep/social/templates/profile.html
+++ b/meep/social/templates/profile.html
@@ -53,6 +53,10 @@
                 </button>
                 {% endif %}
             </form>
+            <br />
+            {% if request.user.id == profile.user.id %}
+            <a href="{% url 'update_user' %}" class="btn btn-outline-secondary">Update Profile</a>
+            {% endif %}
         </div>
     </div>
 </div>
